Ajout des descriptions de chaque produit.

--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -18,7 +18,7 @@
     <!-- Header End -->
 
     <!-- About Start -->
-    <div class="container-fluid about bg-light py-5">
+    <div class="container-fluid about bg-white py-5">
         <div class="container py-2">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -34,19 +34,19 @@
                 <div class="col-lg-6">
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
                     <h1 class="mb-4">Bienvenue à <span class="text-primary">SAAR Assurances</span></h1>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
 
                     {% comment %} <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p> {% endcomment %}
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>50-100 employés</p>
+                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i>50-100 employés</p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Fondée en 1990</p>
                         </div> {% endcomment %}
                         <div class="col-sm-6">
-                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
+                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
