--- a/src/saar_website/templates/saar_website/valeurs.html
+++ b/src/saar_website/templates/saar_website/valeurs.html
@@ -44,27 +44,27 @@
                 <div class="col-md-12 col-lg-12">
                     <div class="alert alert-success" role="alert">
                         <h2>1 | PROFESSIONNALISME</h2>
-                        <p>A simple success alert—check it out!</p>
+                        <p>SAAR Assurances Côte d’Ivoire travaille quotidiennement en sachant que le client est « Roi» et a des besoins. Nos équipes, à qui nous inculquons cette valeur, sont outillées pour faire face aux différentes situations auxquelles elles sont confrontées.</p>
                     </div>
 
                     <div class="alert alert-primary" role="alert">
                         <h2>2 | EXCELLENT SERVICE QUALITE</h2>
-                        <p>A simple success alert—check it out!</p>
+                        <p>Chez SAAR Assurances Côte d’Ivoire, nous vous apportons le support efficace nécessaire pour répondre à vos besoins de sécurité et de vos biens. Chaque jour, nous travaillons à identifier les besoins de couverture, et à les comprendre, pour apporter à la population africaine une valeur ajoutée dans son quotidien, à travers les produits et services les mieux adaptés et à renforcer notre proximité avec nos clients afin de construire ensemble une relation durable.</p>
                     </div>
 
                     <div class="alert alert-info" role="alert">
                         <h2>3 | RESPECTER NOS ENGAGEMENTS</h2>
-                        <p>A simple success alert—check it out!</p>
+                        <p>La SAAR Assurances Côte d’Ivoire conscient que la confiance de nos clients se gagne en honorant nos engagements, et qu’une relation solide est un gage de progrès. Ainsi, chaque collaborateur s’engage à satisfaire ses clients à tout moment et en tout lieu.</p>
                     </div>
 
                     <div class="alert alert-warning" role="alert">
                         <h2>4 | L'ESPRIT D'EQUIPE</h2>
-                        <p>A simple success alert—check it out!</p>
+                        <p>SAAR Assurances Côte d’Ivoire est une organisation composée d’hommes et de femmes d’âges, de cultures et de professions diverses. Ce qui les relie, c’est une culture d’entreprise qui respecte la liberté d’expression de chacun et favorise les relations horizontales par opposition aux structures hiérarchiques rigides.</p>
                     </div>
 
                     <div class="alert alert-danger" role="alert">
                         <h2>5 | INNOVATION</h2>
-                        <p>A simple success alert—check it out!</p>
+                        <p>Consciente que l’assurance est un marché en évolution progressive en Afrique et que de nombreux défis doivent être relevés, SAAR développe des produits pour permettre à tous les segments de la population d’avoir accès à l’assurance.</p>
                     </div>
                 </div>
                 
