--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -25,7 +25,7 @@
                             <h4 class="mb-4 text-white">Nos produits</h4>
                             <a href="{% url 'produit' numero=products_keys.0 %}"><i class="fas fa-angle-right me-2"></i> Assurance Automobile</a>
                             <a href="{% url 'produit' numero=products_keys.1 %}"><i class="fas fa-angle-right me-2"></i> Assurance Santé </a>
-                            <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
+                            <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Assurance Individuelle Accidents </a>
                             <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Assurance Voyage </a>
                             <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Habitation</a>
                             <a href="{% url 'produit' numero=products_keys.9 %}"><i class="fas fa-angle-right me-2"></i> Assurance Loyers Impayés</a>
