--- a/src/saar_website/templates/saar_website/produits/produit-1.html
+++ b/src/saar_website/templates/saar_website/produits/produit-1.html
@@ -18,126 +18,35 @@
     <!-- Header End -->
 
       <!-- Services Start -->
-      <div class="container-fluid bg-light service py-5">
+      <div class="container-fluid bg-white service py-5">
         <div class="container py-5">
-            <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Garanties</h5>
-                <h1 class="mb-0">Nos Garanties</h1>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}}</P>
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong>Dommages couverts : </strong>Accident, choc, collision, incendie, explosion, vol, vol des accessoires, bris de glace.</li>
+                    <li><strong>Assistance : </strong>Soutien à l'assuré en cas d'accident selon les options choisies.</li>
+                </ul>
+
             </div>
 
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h1 class="mb-0" style="color: red;">NOS FORMULES</h1>
+                {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong>Tierce Simple : </strong>Pour véhicule de tout âge.</li>
+                    <li><strong>Tierce SAAR : </strong>Pour véhicule de tout âge.</li>
+                    <li><strong>Tierce Confort (Tiers Complet) : </strong>Pour véhicule de tout âge.</li>
+                    <li><strong>Dommages tous accidents (Tous Risques) : </strong>Pour véhicule de 0 à 5 ans.</li>
+                    <li><strong>Soutrali Auto (mini tous risques) : </strong>Pour véhicule de plus de 5 ans.</li>
+                </ul>
+            </div>
+            
 
-            {% comment %} <div class="row g-4">
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center  bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="text-center">
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Service More</a>
-                    </div>
-                </div>
-            </div> {% endcomment %}
-
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h1 class="mb-0" style="color: red;">NOS GARANTIES</h1>
+            </div>
 
         </div>
     </div>
