--- a/src/saar_website/templates/saar_website/produits/produit-8.html
+++ b/src/saar_website/templates/saar_website/produits/produit-8.html
@@ -18,7 +18,7 @@
     <!-- Header End -->
 
       <!-- Services Start -->
-      <div class="container-fluid bg-light service py-5">
+      <div class="container-fluid bg-white service py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Garanties</h5>
