--- a/src/saar_website/templates/saar_website/produits/produit-8.html
+++ b/src/saar_website/templates/saar_website/produits/produit-8.html
@@ -20,123 +20,98 @@
       <!-- Services Start -->
       <div class="container-fluid bg-white service py-5">
         <div class="container py-5">
+           
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}}</P>
+            </div>
+
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Garanties</h5>
-                <h1 class="mb-0">Nos Garanties</h1>
+                <h1 class="section-title px-3" style = "color: black;">ASSURANCE RESPONSABILITE CIVILE PROFESSIONNELLE</h1>
+            </div> 
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">OBJET</h2><br/> 
+                {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>L'assurance responsabilité civile vise à couvrir les conséquences financières des obligations légales de l'assuré en cas de dommages corporels, matériels et immatériels résultant d'accidents survenus dans le cadre de l'exploitation de l'entreprise, de l'industrie ou du commerce de l'assuré</li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;" >
+                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+               <ul style="font-size: 1.25em; color: black; text-align: justify;" >
+                   <li ><strong>Responsabilité Civil Exploitation </strong></li>
+                   <li><strong>Responsabilité Civile Professionnelle </strong></li>
+                   <li><strong>Responsabilité Civile après Travaux ou Livraison</strong></li>
+                   <li><strong>Défense et Recours</strong></li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
+                </ul>
             </div>
 
 
-            {% comment %} <div class="row g-4">
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center  bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="text-center">
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Service More</a>
-                    </div>
-                </div>
-            </div> {% endcomment %}
+
+
+
+            <div class="mx-auto text-center mb-5" style="max-width: 900px;">
+                <h1 class="section-title px-3" style = "color: black;">ASSURANCE MULTIRISQUE PROFESSIONNEL</h1>
+            </div> 
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">OBJET</h2><br/> 
+                {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>L'assuarance multirisque professionnelle est une assurance complète qui permet, avec ses différentes garanties, de couvrir les dégâts matériels subis par les biens assurés de votre entreprise (bâtiments, matériels, mobilier et aménagements, stock, fonds et divers).</li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;" >
+                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+               <ul style="font-size: 1.25em; color: black; text-align: justify;" >
+                   <li ><strong>Incendie et évènements assimilés</strong></li>
+                   <li><strong>Dommages Electriques</strong></li>
+                   <li><strong>Bris de Glace</strong></li>
+                   <li><strong>Dégâts des Eaux</strong></li>
+                   <li ><strong>Vol dans les locaux</strong></li>
+                   <li><strong>Perte par cas de force majeure</strong></li>
+                   <li><strong>Pertes d'exploitation</strong></li>
+                   <li><strong>Cyclone, tempête, ouragan</strong></li>
+                   <li><strong>Bris de machines</strong></li>
+                   <li><strong>Tous risques informatiques</strong></li>
+                   <li><strong>Grève, émeutes, mouvements populaires</strong></li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Toute entreprise ou PME peu importe le domaine d'activité.</li>
+                </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Remplissez un questionnaire et fournissez les informations demandées pour obtenir une cotation. Rendez-vous dès maintenant dans un bureau de SAAR Assurances Côte d'Ivoire.</li>
+                </ul>
+            </div>
+
+
+
 
 
         </div>
